<resources>
    <string name="app_name">GroceryApp</string>
    <string name="WelcomeString">Welcome to the Grocery App!</string>
    <string name="LoginButton">Log In</string>
    <string name="SignupButton">Sign Up</string>
    <string name="CustSwitch">Customer</string>
    <string name="StoreSwitch">Store</string>
    <string name="emailInput" />
    <string name="passInput1" />
    <string name="LogInError" />
    <string name="SignUpName" />
    <string name="signuppass1" />
    <string name="signuppass2" />
    <string name="signupstore" />
    <string name="signupaddress" />
    <string name="SignUpError" />

    <string name="order">Order</string>
    <string name="order_id">Order ID</string>
    <string name="order_archive">Archive</string>
    <string name="order_customer">Customer Name</string>
    <string name="order_store">Accepted at Store Address</string>
    <string name="order_time">DD/MM/YYYY 00:00</string>
    <string name="order_quantity">Quantity: #</string>
    <string name="order_price">Subtotal: $$</string>
    <string name="order_status">Status</string>
    <string-array name="order_status">
        <item>Order received</item>
        <item>In progress</item>
        <item>Completed</item>
        <item>Archive</item>
    </string-array>
    <string name="btn_archive">Archive</string>

    <string name="product_name">Product Name</string>
    <string name="product_brand">Product Brand</string>
    <string name="product_description">Product Description</string>
    <string name="product_QS">Quantity/Size</string>
    <string name="product_price">$$</string>
    <string name="btn_edit">Edit</string>
    <string name="customtb">CustomTB</string>
    <string name="archived_orders">Archived Orders</string>
    <string name="edit_product_information">Edit Product Information</string>
    <string name="edit_info">Edit Info</string>
    <string name="add_QS">Quantity/Size (Include units)</string>
    <string name="price">Price ($)</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_save">Save</string>
    <string name="add_product">Add Product</string>
    <string name="archiving">Archiving</string>
    <string name="products">Products</string>
    <string name="orders">Orders</string>
    <string name="title_activity_user_nav">UserNav</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="view_item">View Item</string>
    <string name="menu_home">Home</string>
    <string name="menu_orderlist">Order List</string>
    <string name="menu_itemlist">Item List</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_itemadd">Add Item</string>
    <string name="menu_cart">Cart</string>
    <string name="nav_switchStore">Switch to Store</string>
    <string name="nav_switchCustomer">Switch to Customer</string>
    <string name="nav_items">Items</string>
    <string name="nav_orders_done">Completed Orders</string>
    <string name="nav_open_orders">Open Orders</string>
    <string name="cartText">cartText</string>
    <string name="text_cart">text_cart</string>
    <string name="default_text">No available stores found</string>
    <string name="product_price">$$</string>
    <string name="btn_edit">Edit</string>
    <string name="customtb">CustomTB</string>
    <string name="archived_orders">Archived Orders</string>
    <string name="edit_product_information">Edit Product Information</string>
    <string name="edit_info">Edit Info</string>
    <string name="add_QS">Quantity/Size (Include units)</string>
    <string name="price">Price ($)</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_save">Save</string>
    <string name="add_product">Add Product</string>
    <string name="archiving">Archiving</string>
    <string name="products">Products</string>
    <string name="orders">Orders</string>
    <string name="title_activity_user_nav">UserNav</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="view_item">View Item</string>
    <string name="menu_home">Home</string>
    <string name="menu_orderlist">Order List</string>
    <string name="menu_itemlist">Item List</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_itemadd">Add Item</string>
    <string name="menu_cart">Cart</string>
    <string name="nav_switchStore">Switch to Store</string>
    <string name="nav_switchCustomer">Switch to Customer</string>
    <string name="nav_items">Items</string>
    <string name="nav_orders_done">Completed Orders</string>
    <string name="nav_open_orders">Open Orders</string>
    <string name="cartText">cartText</string>
    <string name="text_cart">text_cart</string>
    <string name="default_text">No available stores found</string>
    <string name="title_activity_store_nav">Store Nav</string>
    <string name="title_activity_customer_nav">Customer nav</string>
    <string name="title_home">Home</string>
    <string name="title_cart">Cart</string>
    <string name="title_history">History</string>
    <string name="title_account">Account</string>
    <string name="title_items">Items</string>
</resources>