<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@+id/navigation_store_home">



    <fragment
        android:id="@+id/navigation_store_home"
        android:name="com.example.groceryapp.ui.storeHome.StoreHomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_store_home" />

    <fragment
        android:id="@+id/navigation_store_history"
        android:name="com.example.groceryapp.ui.storeHistory.StoreHistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_store_history" />

    <fragment
        android:id="@+id/navigation_items"
        android:name="com.example.groceryapp.ui.items.ItemsFragment"
        android:label="@string/title_items"
        tools:layout="@layout/fragment_items" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.example.groceryapp.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_acount" />
</navigation>