<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:id="@+id/orderCard"
    android:layout_margin="7dp"

    app:cardCornerRadius="7dp"
    app:cardElevation="2dp"
    app:contentPadding="13dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/productCardContents"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/cardOrder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/cardOrderID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:text="@string/order_id"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/cardOrder"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/cardOrderCustomer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:text="@string/order_customer"
                android:textStyle="italic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardOrder" />

            <TextView
                android:id="@+id/cardOrderDateTime"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:text="@string/order_time"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardOrderCustomer" />

            <TextView
                android:id="@+id/cardOrderStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="14dp"
                android:text="@string/order_status"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/cardOrderPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"

                android:text="@string/order_price"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardOrderDateTime" />

            <Button
                android:id="@+id/buttonArchive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFFFFF"
                android:includeFontPadding="false"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:outlineProvider="none"
                android:text="@string/btn_archive"
                android:textAllCaps="false"
                android:textColor="#FF6D00"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>