<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:id="@+id/productCard"
    android:layout_margin="7dp"

    app:cardCornerRadius="7dp"
    app:cardElevation="2dp"
    app:contentPadding="13dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:id="@+id/productCardContents">

            <TextView
                android:id="@+id/productCard_productName"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:text="@string/product_name"
                android:textSize="20sp"
                android:textStyle="bold"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/productCard_productBrand"
                android:layout_width="wrap_content"

                android:textStyle="italic"
                android:layout_height="wrap_content"
                android:text="@string/product_brand"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/productCard_productName" />

            <TextView
                android:id="@+id/productCard_productDesc"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:text="@string/product_description"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/productCard_productBrand" />

            <TextView
                android:id="@+id/productCard_productPrice"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:text="@string/product_price"
                android:textColor="#304FFE"
                android:textStyle="bold"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/productCard_productDesc" />



        </androidx.constraintlayout.widget.ConstraintLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>