<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:padding="5dp"
    app:cardCornerRadius="15dp"
    app:cardElevation="3dp"
    app:cardMaxElevation="3dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true"
    app:contentPadding="7dp">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ProductImage"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/app_name"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/ProductName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:layout_toEndOf="@id/ProductImage"
            android:paddingTop="5dp"
            android:text="@string/product_name"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ProductDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ProductName"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_toEndOf="@id/ProductImage"
            android:text="@string/product_description"
            android:textAlignment="textStart"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/ProductPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ProductDescription"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:layout_toEndOf="@id/ProductImage"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/product_price"
            android:textAlignment="textEnd"
            android:textSize="12sp"
            android:textStyle="bold" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>